# devops-directive

./: .gitignore  LICENSE  README.md
2020-08-10-smaller-docker-containers/: README.md
2020-08-17-more-secure-docker-containers/: Dockerfile.distroless  README.md
2020-08-31-docker-compose/: Makefile  README.md  docker-compose.yml
2020-09-21-docker-compose-cos/: Makefile  README.md  alias.sh
2020-09-28-gcs-cloudflare-static-site/: README.md  create-bucket.sh
2020-10-05-port-knocking/: Dockerfile  Makefile  README.md  entrypoint.sh  index.html  knockd.conf  port_sequence.py
2020-11-02-secret-management/: README.md  REAMDE.md
2020-11-11-github-super-linter/: Makefile  README.md
2020-11-30-5k-milestone-celebration-generative-art/: .gitignore  Makefile  README.md  channel_ids.json  channel_ids_manual.json  constants.py  convert_video.py  generate_images.py  pyproject.toml  reshape_subscriber_data.py  style_transfer.py  yt_channels.py  yt_get_subscriber_data.py  yt_studio.py  yt_subscriber_api_queries_failed.py
2020-11-30-5k-milestone-celebration-generative-art/subscriber-gallery/: .gitignore  package.json
2020-11-30-5k-milestone-celebration-generative-art/subscriber-gallery/src/: Album.js  App.js  artists.json
2020-12-14-productionize-mern/: .gitignore  Makefile  docker-compose-dev.yml  docker-compose-production.yml
2020-12-21-productionize-mern/: README.md
2020-12-27-productionize-mern/: README.md  docker-compose-dev.yml  sequence.md
2020-12-xx-cloud-GPU/: Makefile
2021-04-19-10000-pods/visualizations/: Makefile  plot.py  pyproject.toml
(+119 files in other folders)
