[tool.poetry]
name = "2020-11-16-2500-celebration-generative-art"
version = "0.1.0"
description = ""
authors = ["sid palas <sid.palas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.3.1"
matplotlib = "^3.3.3"
tensorflow_hub = "^0.10.0"
google_auth_oauthlib = "^0.4.2"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]
google-api-python-client = "^1.12.5"
google-auth-oauthlib = "^0.4.2"
google-auth-httplib2 = "^0.0.4"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
