[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "visualizations"
version = "0.1.0"

[tool.poetry.dependencies]
matplotlib = "^3.3.2"
pandas = "^1.1.3"
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
